<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/pdl_tf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patdatlabel"
            android:textColor="#ff0000ff"
            android:textSize="@dimen/abc_text_size_title_material"
            android:singleLine="true"
            android:inputType="none" />

        <EditText
            android:id="@+id/pd_tf"
            android:text=""
            android:layout_marginLeft="10dp"
            android:autoLink="none"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionDone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_title_material"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ddl_tf"
            android:text="@string/wearablelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000ff"
            android:textSize="@dimen/abc_text_size_title_material"
            android:singleLine="true"
            android:inputType="none" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/devstatlabel"
                android:text="@string/devstatlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff444444"
                android:singleLine="true"
                android:inputType="none" />

            <TextView
                android:id="@+id/ds_tf"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000ff"
                android:singleLine="true"
                android:inputType="none" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/battlabel"
                android:text="@string/batterylvl"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff444444"
                android:singleLine="true"
                android:inputType="none" />

            <TextView
                android:id="@+id/bl_tf"
                android:text=""
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="none" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dbl_tf"
            android:text="@string/bufdatlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000ff"
            android:textSize="@dimen/abc_text_size_title_material"
            android:singleLine="true"
            android:inputType="none" />
    </LinearLayout>

</LinearLayout>
